--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -77,10 +77,17 @@
 
 .description_container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
     width: 65%;
     margin-top: 50px;
+}
+
+.description_container_section1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
+    width: 95%;
 }
 
 .description_head_text,
@@ -91,7 +98,6 @@
 
 .description_user_icon {
     font-size: 40px;
-    padding-right: 50px;
 }
 
 .description_head_subtitle {
